[package]
name = "osdp-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
std = []

[dependencies]
heapless = "0.8.0"
strum = { version = "0.26.3", features = ["derive"] }

[dev-dependencies]
serialport = "4.2.0"
