[package]
name = "osdp-rs"
version = "0.1.0"
edition = "2021"
authors = ["Joshua Rowe <omniscient.oce@gmail.com>"]

[workspace]
resolver = "2"
members = [
    "crates/osdp-cp",
    "crates/osdp-msg",
    "crates/osdp-pd",
    "crates/osdp-sans",
]

[dependencies]
osdp-cp.workspace = true
osdp-msg.workspace = true
osdp-pd.workspace = true
osdp-sans.workspace = true

[workspace.dependencies]
osdp-cp = { path = "crates/osdp-cp" }
osdp-msg = { path = "crates/osdp-msg" }
osdp-pd = { path = "crates/osdp-pd" }
osdp-sans = { path = "crates/osdp-sans" }

heapless = "0.8.0"

[dev-dependencies]
serialport = "4.7.0"
